# bookmarksam

./: .gitattributes  .gitignore  Makefile.am  NEWS  README  README.md  aclocal.m4  autogen.sh  configure.ac
.gitignore/: .gitignore
help/: ChangeLog  ChangeLog~  Makefile.am
help/C/: Makefile.am  bookmarksam.xml
help/en/: Makefile.am  bookmarksam-en.omf
help/fr/: Makefile.am
po/: LINGUAS  POTFILES  POTFILES.in  POTFILES.in~  bookmarksam.pot  bookmarksam.pot-header  bookmarksam.pot-header~  en_GB.po  en_GB.po~  en_US.po  en_US.po~  fr.po  fr.po~
src/: Makefile.am  bookmarksam-common.c  bookmarksam-common.h  bookmarksam-main.c  bookmarksam.c  bookmarksam.h  bookmarksam.ui
tests/: Makefile.am  bookmarksam_tests_main.cc  bookmarksam_tests_main.h  dummy_test.cc  dummy_test.h
